tests/ui/const-generics/occurs-check/unused-substs-3.stderr
error[E0308]: mismatched types
  --> $DIR/unused-substs-3.rs:13:24
   |
LL |     let (mut t, foo) = bind();
   |                        ^^^^^^ cyclic type of infinite size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
